--- a/index.html
+++ b/index.html
@@ -366,11 +366,11 @@
             <div class="form-row">
                 <div class="form-group">
                     <label for="name">Full Name</label>
-                    <input type="text" id="name" placeholder="Nikola Tesla" required>
+                    <input type="text" id="name" placeholder="John Doe" required>
                 </div>
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input type="email" id="email" placeholder="nikola.tesla@example.com" required>
+                    <input type="email" id="email" placeholder="john.doe@example.com" required>
                 </div>
             </div>
 
