--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
 
         </div>
 
-        <p class="copyright">© Copyright 2025. All rights reserved. Urban Taste.</p>
+        <p class="copyright">© Copyright 2025. All rights reserved. Designed by VojinDev.</p>
 
     </footer>
 
